frontend/src/style.css
html {
    background-color: transparent;
    text-align: center;
    color: white;
}

body {
    margin: 0;
    color: white;
    font-family: "Nunito", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
    "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
    /* For Firefox */
    scrollbar-width: none;
    /* For IE and Edge */
    -ms-overflow-style: none;
    overflow: hidden;
}

body::-webkit-scrollbar {
    display: none;
}

@font-face {
    font-family: "Nunito";
    font-style: normal;
    font-weight: 400;
    src: local(""),
    url("assets/fonts/nunito-v16-latin-regular.woff2") format("woff2");
}

#app {
    height: 100vh;
    text-align: center;
}

